update dokerfile